--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
-        
-    </header>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
+    <section class="nav-bar-section">
+        <div class="nav-bar">
+            <h2>Awlad.H</h2>
+            <ul>
+                <button>Contact with me</button>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
