Banner Section Done.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <!-- Nav-Bar Section Starts  -->
     <section class="nav-bar-section">
         <div class="nav-bar">
             <h2>Awlad.H</h2>
@@ -14,5 +15,23 @@
             </ul>
         </div>
     </section>
+    <!-- Nav-Bar Section Ends -->
+
+    <!-- Main Section Starts  -->
+     <main>
+        <!-- Banner Container Section Starts  -->
+         <section class="banner-container-section">
+            <div class="banner-container">
+                <img src="./images/Group.png" alt="">
+                <h1 class="banner-heading">"In the near future, I hope <br>
+                     to become a Developer."
+                </h1>
+                <p class="banner-text">We are the Make Lots Foundation. We design professional <br> websites for those in need. </p>
+                <a href="" class="btn">Contact with me</a>
+            </div>
+         </section>
+         <!-- Banner Container Section Ends  -->
+     </main>
+     <!-- Main Section Ends  -->
 </body>
 </html>
