Web Dev Section Created.

--- a/index.html
+++ b/index.html
@@ -26,12 +26,26 @@
                 <h1 class="banner-heading">"In the near future, I hope <br>
                      to become a Developer."
                 </h1>
-                <p class="banner-text">We are the Make Lots Foundation. We design professional <br> websites for those in need. </p>
+                <p class="banner-text">We are the Maker of Lots Foundation. We design professional <br> websites for those in need. </p>
                 <a href="" class="btn">Contact with me</a>
             </div>
          </section>
          <!-- Banner Container Section Ends  -->
      </main>
      <!-- Main Section Ends  -->
+
+     <!-- Web Development Section Starts -->
+      <section class="web-dev-section">
+        <div class="web-dev-container">
+            <div class="web-dev-texts">
+                <h2 class="web-heading">Why Web Development??</h2>
+                <p class="banner-text">We are the Maker of Lots Foundation. We design professional <br> websites for those in need.</p>
+            </div>
+            <div class="web-dev-contents">
+                
+            </div>
+        </div>
+      </section>
+     <!-- Web Development Section Ends -->
 </body>
 </html>
