--- a/index.html
+++ b/index.html
@@ -42,10 +42,54 @@
                 <p class="banner-text">We are the Maker of Lots Foundation. We design professional <br> websites for those in need.</p>
             </div>
             <div class="web-dev-contents">
-                
+                <div class="web-dev-contents-text">
+                    <h3 class="web-title">I will Do Coding and <br> Change The World</h3>
+                    <p class="web-text">We are the Maker of Lots Foundation. We design professional  websites.</p>
+                    <div class="btn-container">
+                        <button>Learn More</button>
+                    </div>
+                </div>
+                <div class="web-img-container">
+                    <img src="./images/Layer_1.png" alt="">
+                </div>
             </div>
+            <br>
+            <br>
+            <br>
+            <div class="web-dev-contents" style="flex-direction: row-reverse;">
+                <div class="web-dev-contents-text">
+                    <h3 class="web-title">I will help People by creating <br>Modern Web System</h3>
+                    <p class="web-text">We are the Maker of Lots Foundation. We design professional  websites.</p>
+                    <div class="btn-container">
+                        <button>Learn More</button>
+                    </div>
+                </div>
+                <div class="web-img-container">
+                    <img src="./images/Group 3.png" alt="">
+                </div>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div class="web-dev-contents">
+                <div class="web-dev-contents-text">
+                    <h3 class="web-title">I will Do Coding and <br>Change The World</h3>
+                    <p class="web-text">We are the Maker of Lots Foundation. We design professional  websites.</p>
+                    <div class="btn-container">
+                        <button>Learn More</button>
+                    </div>
+                </div>
+                <div class="web-img-container">
+                    <img src="./images/Group 4.png" alt="">
+                </div>
+            </div>
+            <br>
+            <br>
+            <br>
         </div>
-      </section>
+    </section>
+    <br>
+    <br>
      <!-- Web Development Section Ends -->
 </body>
 </html>
