--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <br>
             <br>
             <br>
-            <div class="web-dev-contents" style="flex-direction: row-reverse;">
+            <div class="web-dev-contents" style="flex-direction: row-reverse; background: linear-gradient(to left, #FFF 0%, rgba(255, 255, 255, 0.00) 100%);" >
                 <div class="web-dev-contents-text">
                     <h3 class="web-title">I will help People by creating <br>Modern Web System</h3>
                     <p class="web-text">We are the Maker of Lots Foundation. We design professional  websites.</p>
@@ -88,8 +88,22 @@
             <br>
         </div>
     </section>
-    <br>
-    <br>
+    <!-- <br>
+    <br> -->
      <!-- Web Development Section Ends -->
+
+     <!-- My Inspiration Section Starts  -->
+      <section class="my-inspiration-section">
+        <div class="my-inspiration-container">
+            <h2>My Inspiration</h2>
+            <p class="banner-text">We are the Maker of Lots Foundation. We design professional <br> websites for those in need.</p>
+        </div>
+        <div class="video-container">
+            <div class="video-content">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=YlNU7dsyzwZyWFIx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
+      </section>
+     <!-- My Inspiration Section Ends  -->
 </body>
 </html>
