Current Target Section Done.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-01</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <!-- Nav-Bar Section Starts  -->
     <section class="nav-bar-section">
@@ -18,33 +20,35 @@
     <!-- Nav-Bar Section Ends -->
 
     <!-- Main Section Starts  -->
-     <main>
+    <main>
         <!-- Banner Container Section Starts  -->
-         <section class="banner-container-section">
+        <section class="banner-container-section">
             <div class="banner-container">
                 <img src="./images/Group.png" alt="">
                 <h1 class="banner-heading">"In the near future, I hope <br>
-                     to become a Developer."
+                    to become a Developer."
                 </h1>
-                <p class="banner-text">We are the Maker of Lots Foundation. We design professional <br> websites for those in need. </p>
+                <p class="banner-text">We are the Maker of Lots Foundation. We design professional <br> websites for
+                    those in need. </p>
                 <a href="" class="btn">Contact with me</a>
             </div>
-         </section>
-         <!-- Banner Container Section Ends  -->
-     </main>
-     <!-- Main Section Ends  -->
+        </section>
+        <!-- Banner Container Section Ends  -->
+    </main>
+    <!-- Main Section Ends  -->
 
-     <!-- Web Development Section Starts -->
-      <section class="web-dev-section">
+    <!-- Web Development Section Starts -->
+    <section class="web-dev-section">
         <div class="web-dev-container">
             <div class="web-dev-texts">
                 <h2 class="web-heading">Why Web Development??</h2>
-                <p class="banner-text">We are the Maker of Lots Foundation. We design professional <br> websites for those in need.</p>
+                <p class="banner-text">We are the Maker of Lots Foundation. We design professional <br> websites for
+                    those in need.</p>
             </div>
             <div class="web-dev-contents">
                 <div class="web-dev-contents-text">
                     <h3 class="web-title">I will Do Coding and <br> Change The World</h3>
-                    <p class="web-text">We are the Maker of Lots Foundation. We design professional  websites.</p>
+                    <p class="web-text">We are the Maker of Lots Foundation. We design professional websites.</p>
                     <div class="btn-container">
                         <button>Learn More</button>
                     </div>
@@ -56,10 +60,11 @@
             <br>
             <br>
             <br>
-            <div class="web-dev-contents" style="flex-direction: row-reverse; background: linear-gradient(to left, #FFF 0%, rgba(255, 255, 255, 0.00) 100%);" >
+            <div class="web-dev-contents"
+                style="flex-direction: row-reverse; background: linear-gradient(to left, #FFF 0%, rgba(255, 255, 255, 0.00) 100%);">
                 <div class="web-dev-contents-text">
                     <h3 class="web-title">I will help People by creating <br>Modern Web System</h3>
-                    <p class="web-text">We are the Maker of Lots Foundation. We design professional  websites.</p>
+                    <p class="web-text">We are the Maker of Lots Foundation. We design professional websites.</p>
                     <div class="btn-container">
                         <button>Learn More</button>
                     </div>
@@ -74,7 +79,7 @@
             <div class="web-dev-contents">
                 <div class="web-dev-contents-text">
                     <h3 class="web-title">I will Do Coding and <br>Change The World</h3>
-                    <p class="web-text">We are the Maker of Lots Foundation. We design professional  websites.</p>
+                    <p class="web-text">We are the Maker of Lots Foundation. We design professional websites.</p>
                     <div class="btn-container">
                         <button>Learn More</button>
                     </div>
@@ -88,22 +93,65 @@
             <br>
         </div>
     </section>
-    <!-- <br>
-    <br> -->
-     <!-- Web Development Section Ends -->
+    <!-- Web Development Section Ends -->
 
-     <!-- My Inspiration Section Starts  -->
-      <section class="my-inspiration-section">
+    <!-- My Inspiration Section Starts  -->
+    <section class="my-inspiration-section">
         <div class="my-inspiration-container">
             <h2>My Inspiration</h2>
-            <p class="banner-text">We are the Maker of Lots Foundation. We design professional <br> websites for those in need.</p>
+            <p class="banner-text">We are the Maker of Lots Foundation. We design professional <br> websites for those
+                in need.</p>
         </div>
         <div class="video-container">
             <div class="video-content">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=YlNU7dsyzwZyWFIx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=YlNU7dsyzwZyWFIx"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
-      </section>
-     <!-- My Inspiration Section Ends  -->
+    </section>
+    <br>
+    <br>
+    <!-- My Inspiration Section Ends  -->
+
+    <!-- My Current Target Section Starts  -->
+    <section class="current-target-section">
+        <div class="current-target-container">
+            <h2>My Current Target</h2>
+            <p class="banner-text">We are the Maker of Lots Foundation. We design professional <br> websites for those
+                in need.</p>
+        </div>
+        <div class="current-card-container">
+            <div class="current-card-content" style="background: rgba(255, 76, 30, 0.05);">
+                <div class="current-card-img">
+                    <img src="./images/html.png" alt="">
+                </div>
+                <h3>HTML</h3>
+                <p>Learn HTML and make<br>your own website</p>
+                <a href="https://www.w3schools.com/html/">Learn More</a>
+            </div>
+            <div class="current-card-content" style="background: rgba(0, 76, 232, 0.05);">
+                <div class="current-card-img">
+                    <img src="./images/css.png" alt="">
+                </div>
+                <h3>CSS</h3>
+                <p>Learn CSS and make<br>your own website</p>
+                <a href="https://www.w3schools.com/w3css/">Learn More</a>
+            </div>
+            <div class="current-card-content" style="background: rgba(255, 223, 0, 0.05);">
+                <div class="current-card-img">
+                    <img src="./images/js.png" alt="">
+                </div>
+                <h3>JavaScript</h3>
+                <p>Learn JavaScript and make<br>your own website</p>
+                <a href="https://www.w3schools.com/js/">Learn More</a>
+            </div>
+        </div>
+    </section>
+    <br>
+    <br>
+    <!-- My Current Target Section Ends  -->
 </body>
+
 </html>
