--- a/index.html
+++ b/index.html
@@ -152,6 +152,21 @@
     <br>
     <br>
     <!-- My Current Target Section Ends  -->
+
+    <!-- Support Section Starts  -->
+     <section class="support-section">
+        <div class="support-container">
+            <h2>I need Support</h2>
+            <p class="banner-text" style="color: #FFF;">We are the Maker of Lots Foundation. We design professional <br> websites for those in need.</p>
+            <div class="input-container">
+                <input type="text" name="" id="" placeholder="Suggest me any feedback for me">
+                <button>Submit</button>
+            </div>
+        </div>
+     </section>
+     <br>
+     <br>
+     <!-- Support Section Ends  -->
 </body>
 
 </html>
