Final Commit Done.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </h1>
                 <p class="banner-text">We are the Maker of Lots Foundation. We design professional <br> websites for
                     those in need. </p>
-                <a href="" class="btn">Contact with me</a>
+                <a href="#footer" class="btn">Contact with me</a>
             </div>
         </section>
         <!-- Banner Container Section Ends  -->
@@ -157,7 +157,7 @@
      <section class="support-section">
         <div class="support-container">
             <h2>I need Support</h2>
-            <p class="banner-text" style="color: #FFF;">We are the Maker of Lots Foundation. We design professional <br> websites for those in need.</p>
+            <p class="banner-text" style="color: #FFF; padding-top: 15px;">We are the Maker of Lots Foundation. We design professional <br> websites for those in need.</p>
             <div class="input-container">
                 <input type="text" name="" id="" placeholder="Suggest me any feedback for me">
                 <button>Submit</button>
@@ -167,6 +167,25 @@
      <br>
      <br>
      <!-- Support Section Ends  -->
+
+     <!-- Footer Section Starts  -->
+      <footer id="footer">
+        <div class="footer-container">
+            <h2>An Open Commitment by Awlad Hossain</h2>
+            <div class="social-media">
+                <a href="https://shorturl.at/mBxIz">
+                    <img src="./images/facebook.png" alt="">
+                </a>
+                <a href="https://github.com/">
+                    <img src="./images/github.png" alt="">
+                </a>
+                <a href="https://www.linkedin.com/">
+                    <img src="./images/linkedin-icon 1.png" alt="">
+                </a>
+            </div>
+        </div>
+      </footer>
+      <!-- Footer Section Ends  -->
 </body>
 
 </html>
