--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <h3 class="web-title">I will Do Coding and <br> Change The World</h3>
                     <p class="web-text">We are the Maker of Lots Foundation. We design professional websites.</p>
                     <div class="btn-container">
-                        <button>Learn More</button>
+                        <a href="#">Learn More</a>
                     </div>
                 </div>
                 <div class="web-img-container">
@@ -66,7 +66,7 @@
                     <h3 class="web-title">I will help People by creating <br>Modern Web System</h3>
                     <p class="web-text">We are the Maker of Lots Foundation. We design professional websites.</p>
                     <div class="btn-container">
-                        <button>Learn More</button>
+                        <a href="#">Learn More</a>
                     </div>
                 </div>
                 <div class="web-img-container">
@@ -81,7 +81,7 @@
                     <h3 class="web-title">I will Do Coding and <br>Change The World</h3>
                     <p class="web-text">We are the Maker of Lots Foundation. We design professional websites.</p>
                     <div class="btn-container">
-                        <button>Learn More</button>
+                        <a href="#">Learn More</a>
                     </div>
                 </div>
                 <div class="web-img-container">
